fix(admin css): adjust editormd fullscreen z-index to 1035

--- a/admin/views/css/css-main.css
+++ b/admin/views/css/css-main.css
@@ -739,7 +739,7 @@ input[type="checkbox"]:hover, select:hover {
 
 /* editormd fullscreen mode style */
 .editormd-fullscreen {
-    z-index: 2;
+    z-index: 1035;
 }
 
 /* switch */
